--- a/index.html
+++ b/index.html
@@ -14,23 +14,21 @@
     <h3 class="h3">俄罗斯方块</h3>
 </div>
 <div class="main">
-    <div class="grid"></div>
+    <div class="grid">
+        <div class="score-grade">
+            <div class="score">
+                <h6 class="h6">分数: <span class="score-n">1000</span></h6>
+            </div>
+            <div class="grade">
+                <h6 class="h6">关数: <span class="grade-n">1</span></h6>
+            </div>
+        </div>
+        <div class="game-content"></div>
+    </div>
     <div class="options">
         <div class="next-block">
             <h6 class="h6">下一个方块: </h6>
             <div class="block-n"></div>
-        </div>
-        <div class="score">
-            <h6 class="h6">分数: </h6>
-            <div class="score-n">
-                <span>1000</span>
-            </div>
-        </div>
-        <div class="grade">
-            <h6 class="h6">关数: </h6>
-            <div class="grade-n">
-                <span>1</span>
-            </div>
         </div>
         <div class="start-pause">
             <button class="button-start">
