下落，左右切换

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <h6 class="h6">关数: <span class="grade-n">1</span></h6>
             </div>
         </div>
-        <div class="game-content"></div>
+        <div class="game-content">
+            <canvas id="tetris-block"></canvas>
+        </div>
     </div>
     <div class="options">
         <div class="next-block">
@@ -54,5 +56,8 @@
         </div>
     </div>
 </div>
+
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
